RESOLVED FIXED73924
[EFL] Do not lose message flags when soup resources are converted.
https://bugs.webkit.org/show_bug.cgi?id=73924
Summary [EFL] Do not lose message flags when soup resources are converted.
Raphael Kubo da Costa (:rakuco)
Reported 2011-12-06 08:15:49 PST
Created attachment 118053 [details] Patch Apply the same change added to the GTK+ port in r55086 to prevent soup message flags from being lost by updating the request flags when a response is received.
Attachments
Patch (1.80 KB, patch)
2011-12-06 08:15 PST, Raphael Kubo da Costa (:rakuco)
no flags
Add bug number to ChangeLog (1.85 KB, patch)
2011-12-06 08:19 PST, Raphael Kubo da Costa (:rakuco)
no flags
Patch for landing (1.89 KB, patch)
2011-12-06 11:29 PST, Raphael Kubo da Costa (:rakuco)
no flags
WebKit Review Bot
Comment 1 2011-12-06 08:19:04 PST
Attachment 118053 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/efl/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/efl/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Raphael Kubo da Costa (:rakuco)
Comment 2 2011-12-06 08:19:20 PST
Created attachment 118055 [details] Add bug number to ChangeLog
Gustavo Noronha (kov)
Comment 3 2011-12-06 11:22:46 PST
Comment on attachment 118055 [details] Add bug number to ChangeLog View in context: https://bugs.webkit.org/attachment.cgi?id=118055&action=review > Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:239 > +void FrameLoaderClientEfl::dispatchDidReceiveResponse(DocumentLoader* loader, unsigned long, const ResourceResponse& response) > { > +#if USE(SOUP) > + // Update our knowledge of request soup flags - some are only set > + // after the request is done. > + loader->request().setSoupMessageFlags(response.soupMessageFlags()); > +#endif If you want your build to be really tidy in the non-soup case you should probably have UNUSED_PARAM(loader); in an #else block here, looks good otherwise.
Raphael Kubo da Costa (:rakuco)
Comment 4 2011-12-06 11:29:03 PST
Created attachment 118077 [details] Patch for landing
Raphael Kubo da Costa (:rakuco)
Comment 5 2011-12-06 11:30:44 PST
Note You need to log in before you can comment on or make changes to this bug.