[EFL] Do not lose message flags when converting to/from Soup Requests/Responses https://bugs.webkit.org/show_bug.cgi?id=73924

Reviewed by Gustavo Noronha Silva.

Apply the same change added to the GTK+ port in r55086 to prevent
soup message flags from being lost by updating the request flags when
a response is received.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::dispatchDidReceiveResponse):

Canonical link: https://commits.webkit.org/90606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102159 268f45cc-cd09-0410-ab3c-d52691b4dbfc